--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="sheet">
         <div class="resume">
             <section class="resume__section resume__header">
-                <div class="resume__content" style="text-align: center;">
+                <div class="resume__content">
                     <h1>Mohan Kumar Limbu</h1>
                 </div>
             </section>
