--- a/index.html
+++ b/index.html
@@ -11,96 +11,12 @@
     <div class="sheet">
         <div class="resume">
             <section class="resume__section resume__header">
-                <div class="resume__content">
+                <div class="resume__content" style="text-align: center; border-bottom: 1px solid #ccc;">
                     <h1>Mohan Kumar Limbu</h1>
                 </div>
             </section>
             <div class="resume__columns">
                 <div class="resume__main-column">
-                    <section class="resume__section resume__summary">
-                        <div class="resume__content">
-                            <div class="resume__section-title">
-                                <i class="fa fa-pencil-square-o"></i>
-                                <h2>Objective</h2>
-                            </div>
-                            <div class="other">
-                                <div class="other-info">
-                                    <p>
-                                        Recent MCA graduate with a strong foundation in software development and programming principles. Seeking an entry-level software developer position to leverage my skills in Javascript, Python, and web technologies. Eager to contribute to a dynamic development team while continuously learning and growing in a professional environment.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section class="resume__section resume__education">
-                        <div class="resume__content">
-                            <div class="resume__section-title">
-                                <i class="fa fa-graduation-cap"></i>
-                                <h2>Education</h2>
-                            </div>
-                            <div class="edu-item">
-                                <div class="edu-degree">
-                                    Master of Computer Applications <br>
-                                    <span>@ Sikkim Manipal Institute of Technology, Sikkim Manipal University</span>
-                                </div>
-                                <div class="edu-date">
-                                    Graduated: June 2024 <br>
-                                    CGPA: 8.0/10.0
-                                </div>
-                            </div>
-                            <div class="edu-item">
-                                <div class="edu-degree">
-                                    Bachelor of Science in Computer Science <br>
-                                    <span>@ Government College Rhenock, Sikkim University</span>
-                                </div>
-                                <div class="edu-date">
-                                    Graduated: June 2020 <br>
-                                    CGPA: 7.44/10.0
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-
-                    <section class="resume__section resume__projects">
-                        <div class="resume__content">
-                            <div class="resume__section-title">
-                                <i class="fa fa-code"></i>
-                                <h2>Projects</h2>
-                            </div>
-                            <div class="project-item">
-                                <div class="project-name">
-                                    Personal Portfolio Website
-                                    <span><a href="https://yourwebsite.com" target="_blank"><i class="fa fa-link"></i> Live Demo</a></span>
-                                </div>
-                                <div class="project-tech">HTML, CSS, JavaScript</div>
-                                <div class="project-details">
-                                    <ul>
-                                        <li>Designed and developed a responsive personal portfolio website to showcase projects and skills</li>
-                                        <li>Implemented a clean and modern design using CSS Grid and Flexbox</li>
-                                        <li>Created interactive elements using JavaScript to enhance user experience</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="project-item">
-                                <div class="project-name">
-                                    Weather Forecast CLI Application
-                                    <span><a href="https://github.com/yourusername/weather-cli" target="_blank"><i class="fab fa-github"></i> GitHub</a></span>
-                                </div>
-                                <div class="project-tech">Python, OpenWeatherMap API</div>
-                                <div class="project-details">
-                                    <ul>
-                                        <li>Built a command-line interface application that provides weather forecasts for any city using OpenWeatherMap API to fetch real-time weather data</li>
-                                        <li>Utilized object-oriented programming principles for maintainable and scalable code</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-
-
-                </div>
-                <div class="resume__side-column">
                     <section class="resume__section resume__personal-details">
                         <div class="resume__content">
                             <div class="resume__section-title">
@@ -202,6 +118,88 @@
                                 <div class="cert-issuer">Coursera</div>
                                 <div class="cert-date">
                                     Issued: Nov 2023 
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <div class="resume__side-column">
+                    <section class="resume__section resume__summary">
+                        <div class="resume__content">
+                            <div class="resume__section-title">
+                                <i class="fa fa-pencil-square-o"></i>
+                                <h2>Objective</h2>
+                            </div>
+                            <div class="other">
+                                <div class="other-info">
+                                    <p>
+                                        Recent MCA graduate with a strong foundation in software development and programming principles. Seeking an entry-level software developer position to leverage my skills in Javascript, Python, and web technologies. Eager to contribute to a dynamic development team while continuously learning and growing in a professional environment.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="resume__section resume__education">
+                        <div class="resume__content">
+                            <div class="resume__section-title">
+                                <i class="fa fa-graduation-cap"></i>
+                                <h2>Education</h2>
+                            </div>
+                            <div class="edu-item">
+                                <div class="edu-degree">
+                                    Master of Computer Applications <br>
+                                    <span>@ Sikkim Manipal Institute of Technology, Sikkim Manipal University</span>
+                                </div>
+                                <div class="edu-date">
+                                    Graduated: June 2024 <br>
+                                    CGPA: 8.0/10.0
+                                </div>
+                            </div>
+                            <div class="edu-item">
+                                <div class="edu-degree">
+                                    Bachelor of Science in Computer Science <br>
+                                    <span>@ Government College Rhenock, Sikkim University</span>
+                                </div>
+                                <div class="edu-date">
+                                    Graduated: June 2020 <br>
+                                    CGPA: 7.44/10.0
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="resume__section resume__projects">
+                        <div class="resume__content">
+                            <div class="resume__section-title">
+                                <i class="fa fa-code"></i>
+                                <h2>Projects</h2>
+                            </div>
+                            <div class="project-item">
+                                <div class="project-name">
+                                    Personal Portfolio Website
+                                    <span><a href="https://mohannn-sys.github.io/" target="_blank"><i class="fa fa-link"></i> Live Demo</a></span>
+                                </div>
+                                <div class="project-tech">HTML, CSS, JavaScript</div>
+                                <div class="project-details">
+                                    <ul>
+                                        <li>Designed and developed a responsive personal portfolio website to showcase projects and skills</li>
+                                        <li>Implemented a clean and modern design using CSS Grid and Flexbox</li>
+                                        <li>Created interactive elements using JavaScript to enhance user experience</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="project-item">
+                                <div class="project-name">
+                                    Weather Forecast CLI Application
+                                    <span><a href="https://github.com/yourusername/weather-cli" target="_blank"><i class="fab fa-github"></i> GitHub</a></span>
+                                </div>
+                                <div class="project-tech">Python, OpenWeatherMap API</div>
+                                <div class="project-details">
+                                    <ul>
+                                        <li>Built a command-line interface application that provides weather forecasts for any city using OpenWeatherMap API to fetch real-time weather data</li>
+                                        <li>Utilized object-oriented programming principles for maintainable and scalable code</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
